packages/app/styles/globals.less
@import "~antd/dist/antd.less";
@import "~antd/lib/style/themes/dark.less";

@font-family: 'Avenir Next', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
@border-radius-base: 4px;
@primary-color: #8570e4;
@primary-color-25: #8570e444;
@body-background: #00042d;
@component-background: fade(@white, 10%);
@divider-color: fade(@white, 20%);
@border-color-base: fade(@white, 40%);
@border-color-split: fade(@white, 30%);
@btn-text-hover-bg: fade(@white, 10%); // defaults to 3%
@text-color-secondary: fade(@white, 60%); // defaults to 45%
@layout-header-background: transparent;
@layout-sider-background: fade(@white, 10%);
@component-background-highlighted: fade(@white, 20%);
@layout-header-mobile-height: 48px;
@table-header-bg: transparent;
html {
  background: @body-background;
  background-image: url("/background.png");
  background-size: cover;
  background-repeat: no-repeat;
}

body,
.ant-layout {
  background: transparent;
}

textarea {
  resize: none;
}

.ant-tag {
  border-radius: 99999px;
}

.ant-menu {
  background: transparent;
  border: none;
  // background: @body-background;
  // border-radius: @border-radius-base;
  // border: 1px solid fade(@white, 30%);
}

.ant-card .ant-card {
  // background: #191919;
}

.ant-table-tbody > tr.ant-table-row:hover td.ant-table-cell,
.ant-table-thead th.ant-table-column-has-sorters:hover {
  background: @component-background;
}

.ant-table-thead th.ant-table-column-sort {
  background: unset;
}

.ant-table-filter-column, .ant-table-column-sorters {
  justify-content: unset;
  .ant-table-column-title {
    flex: unset;
  }
}

.ant-layout-content {
  overflow: auto;
}

.ant-modal-title {
  text-align: center;
}

.ant-card.ant-card-small .ant-card-body {
  padding-top: 8px;
  padding-bottom: 4px;
}

.ant-btn:not(.ant-btn-text) {
  font-weight: 600;
}

.ant-btn.ant-btn-ghost {
  background: @btn-text-hover-bg;
}

.ant-btn.hover\:ant-btn-dangerous {
  &:hover,
  &:active,
  &:focus {
    background: unset;
    color: @error-color;
    border-color: @error-color;
  }
}

.ant-form-item {
  margin-bottom: 12px;
}

.ant-select.ant-select-disabled.ant-select:not(.ant-select-customize-input) {
  & .ant-select-selector {
    background: unset;
    border: none;
    padding: 0;
    color: @text-color;
  }

  & .ant-select-arrow {
    display: none;
  }

  & .ant-select-selection-placeholder {
    left: 0;
  }
}

.ant-typography-edit {
  color: @text-color-secondary;
}

.ant-alert {
  padding: 4px 12px;
}

.ant-typography-h1 {
  .typography-title-1();
  margin: 0;
}
.ant-typography-h2 {
  .typography-title-2();
  margin: 0;
}
.ant-typography-h3 {
  .typography-title-3();
  margin: 0;
}
.ant-typography-h4 {
  .typography-title-4();
  margin: 0;
}
.ant-typography-h5 {
  .typography-title-5();
  margin: 0;
}

.ant-typography-caption {
  font-size: 11px;
}

.ant-select .ant-select-disabled .ant-select-selector {
  background: unset;
  border: unset;
  padding: 0;
}

.ant-page-header-heading-left,
.ant-page-header-heading-tags {
  flex: 1;
}

.dewo-label {
  color: @text-color-secondary;
  text-transform: uppercase;
  font-size: 11px;
  font-weight: bold;
}

.ant-form-item-label,
.ant-form-vertical .ant-form-item-label {
  padding-bottom: 2px;

  &,
  & > label {
    color: @text-color-secondary;
    text-transform: uppercase;
    font-size: 11px;
    font-weight: bold;
  }
}

.dewo-field {
  &.dewo-field-display:not(:focus) {
    padding-left: 0;
    border-color: transparent;
  }

  &:disabled {
    padding: 0;
    margin: 0;
    background: unset;
    border: unset;
    cursor: unset;
    color: unset;
  }
}

.pointer-cursor {
  cursor: pointer;
}

.dewo-task-board {
  overflow-x: auto;

  padding: 24px;
  padding-top: 0;

  height: 100%;

  // TODO(fant): rework these hacks
  & > .ant-space {
    display: flex;
    max-height: 100%;

    & > .ant-space-item {
      display: flex;
      flex-direction: column;
      min-height: 0;
      max-height: 100%;

      & > div {
        display: flex;
        flex-direction: column;
        min-height: 0;
        max-height: 100%;

        & > .ant-card {
          display: flex;
          flex-direction: column;
          min-height: 0;
          max-height: 100%;

          & > .ant-card-head {
            flex-shrink: 0;
          }
        }
      }
    }
  }
}

::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

::-webkit-scrollbar-thumb {
  background-color: @component-background-highlighted;
  border-radius: @border-radius-base;
  border: 1px solid transparent;
  background-clip: content-box;
}
::-webkit-scrollbar {
  width: 6px;
}

::-webkit-scrollbar-thumb {
  background-color: @component-background;
}

*:hover::-webkit-scrollbar-thumb {
  background: @component-background-highlighted;
}

.dewo-landing-page-main {
  div:last-child {
    max-height: 100%;
  }
}
.dewo-task-board-column.ant-card-small {
  
  & > .ant-card-head > .ant-card-head-wrapper {
    .ant-card-extra {
      padding: 0;
    }
    .ant-card-head-title {
      padding: 12px 0;
    }
  }

  .ant-card-body {
    overflow-y: auto;
  }
}
.ant-card.dewo-card-create-project {
  height: 100%;
  cursor: pointer;

  & .ant-card-body {
    height: 100%;
    display: grid;
    place-items: center;
  }
}

.ant-list-item-action {
  margin-left: 0;
}

.ant-list-item-meta {
  align-items: center;
}

.ant-list-item-meta-title {
  margin-bottom: 0;
}

.dewo-sidebar-item {
  padding: 0;
  width: 72px;
  height: 72px;
  display: grid;
  place-items: center;
  border-radius: @border-radius-base;

  transition: background 0.3s ease-in-out;
  position: relative;
  &:hover {
    background: @component-background;
    &::before {
      height: 20px;
      opacity: 1;
    }
  }

  &::before {
    content: "";
    width: @border-radius-base;
    height: 8px;
    opacity: 0;
    border-top-right-radius: 8px;
    border-bottom-right-radius: 8px;
    background-color: @text-color-secondary;
    position: absolute;
    left: 0;
    transition: all 0.3s ease-in-out;
  }

  &.active {
    &::before {
      background-color: @text-color;
      height: 48px;
      opacity: 1;
    }
  }
}
.dewo-header-mobile {
  display: none;
  @media (max-width: @screen-sm) {
    display: flex;
    align-items: center;
    padding-right: 16px;
  }
}
.ant-card.dewo-card-highlighted {
  background-color: @primary-color-25;
  border: 2px solid @primary-color;
}

.ant-page-header-heading .ant-avatar {
  margin-right: unset;
}

.hover\:component-highlight {
  transition: background 0.3s ease-in-out;
  &:hover {
    background: fade(@white, 20%);
  }
}

.hover\:cursor-pointer {
  &:hover {
    cursor: pointer;
  }
}

.dewo-divider-right {
  border-right: 1px solid @divider-color;
}

.ant-empty-image img {
  height: 100%;
}

.ant-popover-message-title {
  max-width: 200px;
}

.ant-tabs-tab .anticon {
  margin-right: 6px;
}

.ant-tabs-tab:not(.ant-tabs-tab-active) .anticon {
  color: @text-color-secondary;
}

.max-w-sm {
  max-width: @screen-sm;
}
.max-w-md {
  max-width: @screen-md;
}
.max-w-lg {
  max-width: @screen-lg;
}
.max-w-xl {
  max-width: @screen-xl;
}
.max-w-xxl {
  max-width: @screen-xxl;
}
.mx-auto {
  margin-left: auto;
  margin-right: auto;
}
.w-full {
  width: 100%;
}
.h-full {
  height: 100%;
}

.mb-2 {
  margin-bottom: 16px;
}

.mb-3 {
  margin-bottom: 24px;
}

.bg-primary {
  background: @primary-color;
}

.bg-component {
  background: @component-background;
}

.bg-body {
  background: @body-background;
}

#__next,
.ant-layout {
  height: 100%;
}
.show-sm {
  display: none;
  @media (min-width: @screen-sm) {
    display: block;
  }
}
.show-xs {
  display: none;
  @media (max-width: @screen-sm) {
    display: block;
  }
}
.text-overflow-ellipsis {
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
}
.text-secondary {
  color: @text-color-secondary;
}
.dewo-md-editor.w-md-editor {
  background: transparent;
  font-family: unset;

  .w-md-editor-input {
    border: 1px solid @border-color-base;
    border-radius: 0;
    border-top-left-radius: @border-radius-base;
    border-top-right-radius: @border-radius-base;
    padding: 12px;
  }

  .w-md-editor-text {
    padding: 0;
    padding-bottom: 18px;
    caret-color: @text-color;
  }
  
  .wmde-markdown-color {
    color: @text-color-secondary;
  }

  a {
    color: @primary-color;
  }

  textarea.w-md-editor-text-input::selection {
    background-color: fade(@primary-color, 40%);
  }
  textarea.w-md-editor-text-input::-moz-selection {
    background-color: fade(@primary-color, 40%);
  }

  .wmde-markdown {
    font-size: unset;
    font-family: unset;

    pre {
      background: @component-background;
      code {
        background: transparent;
      }
    }
  }

  // Disable fixed height of preview area and set it to the natural height of the content
  .w-md-editor-bar {
    display: none;
  }

  &, & .w-md-editor-content {
    height: unset !important;

    & .w-md-editor-preview {
      position: unset;
      padding: unset;
    }
  }
}

.dewo-md-editor-footer {
  border: 1px solid @border-color-base;
  border-top: none;
  border-bottom-left-radius: @border-radius-base;
  border-bottom-right-radius: @border-radius-base;

  padding: 4px;
  padding-left: 12px;
}

.ant-upload.ant-upload-drag.dewo-md-upload {
  background-color: unset;

  &.ant-upload.ant-upload-drag {
    border: none;
  }
  &.ant-upload.ant-upload-drag .ant-upload {
    padding: 0;
  }
}

.dewo-md-upload.ant-upload.ant-upload-drag .ant-upload-btn,
.dewo-md-upload.ant-upload.ant-upload-drag .ant-upload-btn .ant-upload-drag-container {
  display: block;
}

.dewo-lp-feature-tabs {
  .ant-tabs-nav:before {
    display: none;
  }

  img {
    border: 1px solid @primary-color;
    border-radius: @border-radius-base * 2;
    box-shadow: 0 0 10px 0 @primary-color;
  }
}

.dewo-settings-tabs {
  .ant-tabs-nav-list {
    display: flex;
    flex-direction: column;
    width: 192px;

    .ant-tabs-tab-active {
      background: @component-background;

      .ant-tabs-tab-btn {
        color: @text-color;
      }
    }
  }

  .ant-tabs-nav-more {
    display: none;
  }
  
  .ant-tabs-tab + .ant-tabs-tab {
    margin-left: 0;
  }

  .ant-tabs-tab {
    padding-right: 12px;
    padding-left: 12px;
  }
}

.dewo-task-reaction {
  padding-left: 4px;
  border-radius: @border-radius-base;
  border: 1px solid @border-color-base;

  transition: background, border 0.3s ease-in-out;
  
  &.dewo-task-reaction-selected {
    border: 1px solid @primary-color;
    background: @primary-color-25;
  }

  &.dewo-task-reaction-selectable {
    cursor: pointer;
  }

  .ant-badge .ant-badge-count {
    background: transparent;
    box-shadow: none;
    font-weight: 600;
  }

  .emojione {
    display: grid;
    place-items: center;
  }
}

